# fdpass-rs

./: .gitignore  Cargo.toml  README.md
examples/: receiver.rs  sender.rs
src/: ffi.rs  lib.rs
